circuit_breakers/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0,port_value: 9901 }
static_resources:
  listeners:
  - name: http_circuit
    address:
      socket_address: { address: 0.0.0.0,port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: test_route
            virtual_hosts: 
            - name: webcluster
              domains: ["*"]
              routes:
              - match: {prefix: "/service/colorless"}
                route: { cluster: webcluster1 }
              - match: {prefix: "/"}
                route: { cluster: webcluster2 }
          http_filters:
          - name: envoy.router
  clusters:
  - name: webcluster1
    lb_policy: ROUND_ROBIN
    type: STRICT_DNS
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: webcluster1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: 
                address: colored
                port_value: 80 
    circuit_breakers:
      thresholds:
        max_connections: 1
        max_pending_requests: 1
        max_retries: 3
  - name: webcluster2
    lb_policy: ROUND_ROBIN
    type: STRICT_DNS
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: webcluster2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: {address: myservice,port_value: 80}
    outlier_detection:
      interval: 1s
      consecutive_5xx: 3
      consecutive_gateway_failure: 3
      base_ejection_time: 10s
      enforcing_consecutive_gateway_failure: 100
      max_ejection_percent: 30
      success_rate_minmum_hosts: 2
