circuit_breakers/service-envoy.yaml
admin: 
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: http_ingress
    address: 
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_htp
          codec_type: AUTO
          route_config:
            name: route_test
            virtual_hosts:
            - name: webcluster
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: webcluster2}
          http_filters:
          - name: envoy.router
  clusters:
  - name: webcluster2
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: webcluster2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: 
                address: 127.0.0.1
                port_value: 8080 
    circuit_breakers:
      thresholds:
        max_connections: 1
        max_pending_requests: 1
        max_retries: 2
